--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Coding Quiz</title>
 </head>
 <body>
-    
+    <div id="Quiz">
+
+    </div>
+    <button id="submit"> submit</button>
+    <div id="results"></div>
 </body>
 </html>
