--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/style.css" />
     <title>Coding Quiz</title>
 </head>
 <body>
-    <div id="Quiz">
+    <div id="quiz">
 
     </div>
     <button id="submit"> submit</button>
     <div id="results"></div>
+    <script src="./script.js" ></script>
+    
 </body>
 </html>
