--- a/mainpage.html
+++ b/mainpage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    <title>Coding Quiz</title>
     <link rel="stylesheet" src="./assets/style.css">
-</head>
+    </head>
 
 <header> 
 
@@ -21,7 +21,13 @@
     <a href="index.html"> 
     <button  type="button" class="btn btn-primary" id="submit" > Start </button>
     </a>
-
+    
+    <script>
+        document.querySelector('#redirect')
+            .addEventListener('click', () => {
+                window.location.href ='mainpage.html';
+            });
+    </script>
 
 </body>
     
